# rdbstudio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e.yml  release.yml
.playwright-mcp/: page-2026-05-15T08-12-58-140Z.yml  page-2026-05-15T08-13-27-264Z.yml  page-2026-05-15T08-13-57-169Z.yml  page-2026-05-15T08-14-18-134Z.yml  page-2026-05-15T08-14-33-776Z.yml  page-2026-05-15T08-14-50-712Z.yml
e2e-tests/: package.json  pnpm-lock.yaml  wdio.conf.js
e2e-tests/specs/: smoke.spec.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  history.rs  lib.rs  main.rs  model.rs  secret.rs  state.rs  store.rs
src-tauri/src/commands/: connections.rs  data.rs  design.rs  io.rs  meta.rs  mod.rs  query.rs  schema.rs
src-tauri/src/db/: alter.rs  data.rs  design.rs  exec.rs  io.rs  meta.rs  mod.rs  pool.rs  redis_ops.rs
src-tauri/tests/: alter_sqlite.rs  data_sqlite.rs  design_sqlite.rs  e2e_sqlite.rs  exec_sqlite.rs  io_roundtrip.rs  meta_sqlite.rs
src-tauri/tests/common/: mod.rs
src/i18n/: translations.ts
src/lib/: api.test.ts  api.ts  clipboard.ts  cn.test.ts  csv.test.ts  csv.ts  sql.test.ts  sql.ts
src/store/: connections.test.ts  connections.ts  i18n.ts  layout.ts  toasts.ts  workspace.test.ts  workspace.ts
src/styles/: globals.css
src/types/: index.ts
test/: setup.ts
(+40 files in other folders)
