[package]
name = "rdbstudio"
version = "0.1.0"
description = "Modern cross-platform database GUI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "rdbstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
    "uuid",
    "json",
    "macros",
] }
futures = "0.3"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
csv = "1.3"
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tempfile = "3"
